possibly fix contrast on text:selected in Ash

--- a/.themes/Ash/gtk-3.0/gtk.css
+++ b/.themes/Ash/gtk-3.0/gtk.css
@@ -6441,5 +6441,5 @@ window.background.thunar,
 
 text:selected {
 	background-color: #bbbbbb;
-	color: #a8afd7;
+	color: #222222;
 }
